# omniai

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
docs/: architecture.md
src/discriminative/: base.py
src/discriminative/linear/: lr.py
src/loss/: clf.py  reg.py
src/optimisers/: base.py  gd.py  trainer.py
src/optimisers/analytical/: base.py  configs.py
src/optimisers/analytical/adaptive/: adagrad.py
src/trainers/: base.py
src/trainers/analytical/: configs.py  gradient_trainer.py
src/utils/: configs.py  enums.py  protocols.py
tests/discriminative/linear/: lr.py
